[tool.poetry]
authors = ["Nelson Lee <leelhn2345@outlook.com>"]
description = "telegram bot by leelhn2345"
name = "polarbear-bot"
version = "0.1.0"

[tool.poetry.dependencies]
aiogram = "^2.15"
httpx = "^0.19.0"
loguru = "^0.5.3"
pre-commit = "^2.15.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
ipykernel = "^6.4.1"
mypy = "^0.910"
pytest = "^6.2.5"
python-dotenv = "^0.19.0"
python-telegram-bot = "^13.7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
python_version = 3.9

check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = 'silent'
ignore_missing_imports = true
namespace_packages = true
no_namespace_packages = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
